--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -8,7 +8,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>giannidona - newsletter</title>
+		<title>Astro</title>
 	</head>
 	<body class="w-7/12 mx-auto mt-12 bg-orange-200	">
 		<section class="text-right">
@@ -16,7 +16,7 @@
 			<p class="mb-10">newsletter</p>
 			<a class="ml-2" href="/">Inicio</a>
 			<a class="ml-2" href="/about/">Sobre Mi</a>
-			<a class="ml-2" href="/contact/">Contacto</a>
+			<a class="ml-2" href="/about/">Contacto</a>
 		</section>
 	</body>
 </html>
