--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,15 @@
 ---
+import BaseLayout from "../layouts/BaseLayout.astro";
+import BlogPost from "../components/BlogPost.astro";
 
+const pageTitle = "giannidona - newsletter";
+const allPosts = await Astro.glob("../pages/posts/*.md");
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>giannidona - newsletter</title>
-	</head>
-	<body class="w-7/12 mx-auto mt-12 bg-orange-200	">
-		<section class="text-right">
-			<h1 class="font-semibold">giannidona</h1>
-			<p class="mb-10">newsletter</p>
-			<a class="ml-2" href="/">Inicio</a>
-			<a class="ml-2" href="/about/">Sobre Mi</a>
-			<a class="ml-2" href="/contact/">Contacto</a>
-		</section>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  {
+    allPosts.map((post) => (
+      <BlogPost url={post.url} title={post.frontmatter.title} />
+    ))
+  }
+</BaseLayout>
