home page design

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,11 +12,9 @@ const { pageTitle } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
   </head>
-  <body class="w-5/6 md:w-7/12 lg:w-5/12 xl:w-3/12 mx-auto mt-12 bg-orange-200">
+  <body class="w-5/6 md:w-7/12 lg:w-5/12 xl:w-3/12 mx-auto mt-12">
     <Header />
-    <p>INICIO</p>
     <slot />
-
     <Footer />
   </body>
 </html>
