--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -3,16 +3,29 @@ import Header from "../components/Header.astro";
 const { frontmatter } = Astro.props;
 ---
 
-<body class="w-5/6 md:w-7/12 lg:w-5/12 xl:w-3/12 mx-auto mt-12 bg-orange-200">
-  <Header />
-  <div class="mt-10">
-    <div class="my-2">
-      <h1 class="font-bold">{frontmatter.title}</h1>
-      <p>{frontmatter.description}</p>
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{frontmatter.pageTitle}</title>
+  </head>
+  <body class="w-5/6 md:w-7/12 lg:w-5/12 xl:w-3/12 mx-auto mt-12">
+    <Header />
+    <div class="mt-10">
+      <div class="mt-2 mb-10">
+        <p class="italic">{frontmatter.pubDate}</p>
+        <h1 class="font-bold text-3xl my-4">{frontmatter.title}</h1>
+        <p>{frontmatter.tags}</p>
+      </div>
+      <slot />
+      <div class="my-5">
+        <a
+          class="text-blue-800 tracking-wide font-semibold hover:text-blue-600"
+          href="/">&larr; Volver</a
+        >
+      </div>
     </div>
-    <slot />
-    <div class="my-5">
-      <a href="/">Volver</a>
-    </div>
-  </div>
-</body>
+  </body>
+</html>
