--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,10 +1,7 @@
----
-
----
-
 <section class="text-right">
   <h1 class="font-semibold">giannidona</h1>
   <p class="mb-10">newsletter</p>
   <a class="ml-2" href="/">Inicio</a>
+  <a class="ml-2" href="/tutorials">Tutoriales</a>
   <a class="ml-2" href="/about/">Sobre Mi</a>
 </section>
