mini about changes

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,23 +5,41 @@ const pageTitle = "Sobre mi";
 
 <BaseLayout pageTitle={pageTitle}>
   <h1 class="font-bold text-2xl">Sobre Mi</h1>
-  <p class="mt-7 mb-5">Hola👋, soy Gianluca, programador argentino.</p>
+  <p class="mt-7 mb-5">
+    Hola👋, soy Gianluca tengo 19 años y soy un programador argentino.
+  </p>
+  <p class="mb-5">Casi todo lo que programo es en Javascript ⭐.</p>
   <p class="mb-5">
-    Casi todo lo que programo es en JS, pero últimamente me está llamando la
-    atención el no-code💻.
+    Actualmente estoy buscando trabajo, ya sea de manera freelance o en alguna
+    empresa 🏢.
+  </p>
+  <p class="mb-5">
+    Si queres que trabajar en conjunto me podes contactar por <a
+      class="underline font-bold"
+      href="https://www.linkedin.com/in/gianidonato/"
+      target="_blank">linkedin</a
+    >, <a
+      class="underline font-bold"
+      href="https://twitter.com/giannidona_dev"
+      target="_blank">x</a
+    > o <a
+      class="underline font-bold"
+      href="mailto:giannidonato.dev@gmail.com"
+      target="_blank">email</a
+    > 📥.
   </p>
   <p class="mb-5">
     A veces hago streams en <a
       class="underline font-bold"
       href="https://www.twitch.tv/giannidona"
       target="_blank">twitch</a
-    > creando proyectos o aprendiendo📖.
+    > creando proyectos o aprendiendo 📖.
   </p>
   <p>
     Mi hobby es ser dj, te dejo mi <a
       class="underline font-bold"
-      href="https://soundcloud.com/gianlucadonato"
-      target="_blank">soundcloud</a
-    > por si quieres escuchar algunos de mis sets.
+      href="https://www.youtube.com/channel/UCexdSSXZoDlQNRzFO5AmVoQ"
+      target="_blank">youtube</a
+    > por si quieres escuchar algunos de mis sets 🎧.
   </p>
 </BaseLayout>
