--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,6 +7,9 @@
     <p>desde 2024</p>
   </div>
   <div>
+    <a class="pl-2" href="https://twitter.com/giannidona_dev" target="_blank"
+      >x</a
+    >
     <a class="pl-2" href="https://github.com/giannidona" target="_blank"
       >github</a
     >
